[package]
name = "config"
version = "0.1.0"
authors = ["Dmicheal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
get_if_addrs = { version = "0.5.3", default-features = false }
log = { version = "0.4.11", features = ["serde"] }
mirai-annotations = "1.10.1"
rand = "0.7.3"
serde = { version = "1.0.115", features = ["rc"], default-features = false }
serde_yaml = "0.8.13"

