[package]
name = "crypto"
version = "0.1.0"
authors = ["Dmicheal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.32"
bytes = "0.5.6"
vanilla-curve25519-dalek = { version = "3", package = 'curve25519-dalek', optional = true }
curve25519-dalek = { git = "https://github.com/novifinancial/curve25519-dalek.git", branch = "fiat3", version = "3", default-features = false, features = ["std", "fiat_u64_backend"], optional = true }
digest = "0.9.0"
vanilla-ed25519-dalek = { version = "1.0.0", package = 'ed25519-dalek', optional = true }
ed25519-dalek = { git = "https://github.com/novifinancial/ed25519-dalek.git", branch = "fiat4", version = "1.0.0", default-features = false, features = ["std", "fiat_u64_backend", "serde"], optional = true }
hex = "0.4.2"
hkdf = "0.9.0"
once_cell = "1.4.1"
mirai-annotations = "1.10.1"
proptest = { version = "0.10.1", optional = true }
proptest-derive = { version = "0.2.0", optional = true }
rand = "0.7.3"
rand_core = { version = "0.5.1", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_bytes = "0.11.5"
serde-name = "0.1.1"
sha2 = "0.9.1"
static_assertions = "1.1.0"
thiserror = "1.0.20"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
vanilla-x25519-dalek = { version = "1.0.1", package = 'x25519-dalek', optional = true }
x25519-dalek = { git = "https://github.com/novifinancial/x25519-dalek.git", branch = "fiat3", version = "1.0.1", default-features = false, features = ["std", "fiat_u64_backend"], optional = true}
aes-gcm = "0.6.0"

crypto_derive = {path="../crypto_derive"}
lcs = {path="../lcs"}

[dev-dependencies]
bitvec = "0.17.4"
byteorder = "1.3.4"
proptest = "0.10.1"
proptest-derive = "0.2.0"
ripemd160 = "0.9.1"
criterion = "0.3.3"
sha3 = "0.9.1"
serde_json = "1.0.57"
trybuild = "1.0.33"
