[package]
name = "crypto_derive"
version = "0.1.0"
authors = ["Dmicheal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0.39", features = ["derive"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"
