[package]
name = "swarm"
version = "0.1.0"
authors = ["Dmicheal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
ctrlc = { version = "3.1.6", default-features = false }
structopt = "0.3.17"
thiserror = "1.0.20"
hex = "0.4.2"
rand = "0.7.3"

config = {path="../config"}